# budgie-desktop-branding

./: README.md  budgie-mimeapps.list  meson.build  mimeapps.list  mkrelease.sh
env/: 60-budgie-gl.sh  meson.build
lightdm/: 10_budgie.conf  30_budgie_fortitude.conf  40_budgie_fortitude.conf  meson.build
schemas/: com.solus-project.budgie-panel.gschema.override  com.solus-project.icon-tasklist.gschema.override  meson.build  org.gnome.desktop.background.gschema.override  org.gnome.desktop.datetime.gschema.override  org.gnome.desktop.interface.gschema.override  org.gnome.desktop.screensaver.gschema.override  org.gnome.desktop.wm.preferences.gschema.override  org.nemo.desktop.gschema.override  org.nemo.preferences.gschema.override  x.dm.slick-greeter.gschema.override
schemas/all/: meson.build
schemas/fortitude/: com.solus-project.budgie-panel.gschema.override  com.solus-project.budgie-raven.gschema.override  meson.build  org.gnome.desktop.background.gschema.override  org.gnome.desktop.interface.gschema.override  org.gnome.desktop.screensaver.gschema.override  org.gnome.nautilus.preferences.gschema.override  org.gtk.settings.file-chooser.gschema.override  solus-fortitude.layout  x.dm.slick-greeter.gschema.override
schemas/fortitude-plus/: meson.build  org.gnome.desktop.background.gschema.override  org.gnome.desktop.screensaver.gschema.override  org.gnome.nautilus.preferences.gschema.override  org.nemo.desktop.gschema.override  org.nemo.window.gschema.override  us.getsol.budgie-desktop-view.gschema.override  x.dm.slick-greeter.gschema.override
schemas/legacy/: com.solus-project.icon-tasklist.gschema.override  meson.build  org.gnome.desktop.background.gschema.override  org.gnome.desktop.interface.gschema.override  org.gnome.desktop.screensaver.gschema.override  org.gnome.settings-daemon.gschema.override
schemas/livecd/: com.solus-project.budgie-wm.gschema.override  com.solus-project.icon-tasklist.gschema.override  meson.build  org.gnome.desktop.screensaver.gschema.override  org.gnome.desktop.session.gschema.override
schemas/material/: meson.build
schemas/shannon/: com.solus-project.icon-tasklist.gschema.override  meson.build  org.gnome.desktop.background.gschema.override  org.gnome.desktop.interface.gschema.override  org.gnome.desktop.screensaver.gschema.override  org.gnome.desktop.wm.preferences.gschema.override
